# OP_project_2

./: CMakeLists.txt  README.md  constants.h  doxygen_config  functions.cpp  main.cpp  student.cpp  student.h  test.cpp
docs/: annotated.html  class_person-members.html  class_person.html  class_student-members.html  class_student.html  classes.html  constants_8h_source.html  doxygen_crawl.html  files.html  functions_8cpp_source.html  hierarchy.html  index.html  md__r_e_a_d_m_e.html  pages.html  student_8cpp_source.html  student_8h_source.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  pages_1.js  searchdata.js
input/: .gitignore
